# indextool

./: README.md  indextool.cabal  stack.yaml
app/: Main.hs
example/: graph.dot
src/: Lib.hs
